# Ranking-system

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
ranking/core/: app.py  base.py  rank.py  settings.py  utils.py
ranking/data/raw/: spaces_dummy_data_v3.json
ranking/notebooks/: json.ipynb  rank_algorithm.ipynb
ranking/src/: app.py  json_parsing.py  rank.py  settings.py  transformers.py  tunning.py  utils.py
