[tool.poetry]
name = "Ranking-system"
version = "0.1.0"
description = ""
authors = ["Nicola Ibrahim <nicolaibrahim969@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "Ranking-system"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
numpy = "^1.24.2"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.0.4"
flake8 = "^6.0.0"
yapf = "^0.32.0"
isort = "^5.12.0"
scikit-learn = "^1.2.2"
ipykernel = "^6.21.3"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 5
line_length = 119

# [tool.yapf]
# based_on_style = "google"
# align_closing_bracket_with_visual_indent = true
# coalesce_brackets = true
# column_limit = 119
# dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
